experimental/parser/testdata/parser/syntax/edition_proto2.proto.stderr.txt
error: unexpected syntax in `edition` declaration
  --> testdata/parser/syntax/edition_proto2.proto:15:11
   |
15 | edition = "proto2";
   |           ^^^^^^^^
  help: replace with `syntax`
   |
15 | - edition = "proto2";
15 | + syntax = "proto2";
   |

encountered 1 error
